# ai_companion

./: .gitignore  README.md  create_structure.sh  pyproject.toml  requirements.txt
agents/: app.py
agents/core/: __init__.py  agent_card.py  agent_executor.py  memory.py  tools.py
